--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -4,7 +4,7 @@
 
 {% block fos_user_content %}
 {% if error %}
-    <div>{{ error|trans }}</div>
+    <div class="alert alert-danger">{{ error|trans }}</div>
 {% endif %}
 
 <form role="form" action="{{ path("fos_user_security_check") }}" method="post">
