--- a/src/Telegraf/ChecklistBundle/Resources/views/Form/fields.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Form/fields.html.twig
@@ -2,7 +2,7 @@
 
 {% block form_row %}
 {% spaceless %}
-    <div class="form-group">
+    <div class="form-group {% if errors|length > 0 %} has-error{% endif %}">
         {{ form_label(form) }}
         {{ form_errors(form) }}
         {{ form_widget(form) }}
@@ -13,6 +13,20 @@
 {% block form_widget_simple %}
 {% spaceless %}
     {% set type = type|default('text') %}
-    <input type="{{ type }}" {{ block('widget_attributes') }} {% if attr is empty %}class="form-control" {% endif %} {% if value is not empty %}value="{{ value }}" {% endif %}/>
+    <input type="{{ type }}" {{ block('widget_attributes') }} {% if attr is empty %}class="form-control" {% endif %} {% if value is not empty %}value="{{ value }}" {% endif %}>
 {% endspaceless %}
 {% endblock form_widget_simple %}
+
+{% block form_errors %}
+    {% spaceless %}
+        {% if errors|length > 0 %}
+        <div class="alert alert-danger">
+	        <ul>
+	            {% for error in errors %}
+	                <li>{{ error.message }}</li>
+	            {% endfor %}
+	        </ul>
+        </div>
+        {% endif %}
+    {% endspaceless %}
+{% endblock form_errors %}
