--- a/src/Telegraf/ChecklistBundle/Resources/views/Default/index.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Default/index.html.twig
@@ -5,9 +5,10 @@
 	<div class="row">
 	  <div class="col-md-12">
 		<form role="form">
+			<span id="addItemFormErrors"></span>
 			<div class="form-group checklistForm">
 				<label for="newItemText">Enter a Task:</label>
-				<input type="text" class="form-control" id="newItemText" placeholder="My task..." />
+				<input pattern=".{1,100}" required title="Task must be 1 to 10 characters." type="text" class="form-control" id="newItemText" placeholder="My task..." />
 			</div>
 			<button type="button" class="btn btn-default" id="addItem">Add</button>
 		</form>
@@ -38,18 +39,25 @@ $('#newItemText').keypress(function(e){
 		e.preventDefault();
 	}
 });
-$('.editItemText').keypress(function(e){
+$('#checklistItems').on('keypress', '.editItemText', function(e){
 	if(e.keyCode==13) {
-		$(this).closest('.saveItem').click();
+		var id = $(this).closest(".checklistItem").data("id");
+		$("#item_"+id).find('.updateItem').click();
 		e.preventDefault();
 	}
 });
 $("#addItem").click(function(event) {
 	event.preventDefault();
+	if ($("#newItemText").val()=='') {
+		return;
+	}
 	$.post('{{ path('create_item') }}', { text: $("#newItemText").val() }, function(data) {
 		$("ul#checklistItems").prepend(data);
 		$("#newItemText").val("");
-	}, "html");
+	}, "html").fail(function(xhr) {
+		var json = $.parseJSON(xhr.responseText);
+		$('#addItemFormErrors').html(json.message);
+	}, "json");
 });
 $("#checklistItems").on('click', ".tickItem", function(event) {
 	var id = $(this).closest(".checklistItem").data("id");
@@ -59,17 +67,25 @@ $("#checklistItems").on('click', ".tickItem", function(event) {
 	}, "html");
 });
 $("#checklistItems").on('click', ".editItem", function(event) {
+	event.preventDefault();
 	var id = $(this).closest(".checklistItem").data("id");
 	$.get( Routing.generate('edit_item', { id: id }), function( data ) {
   		$("#item_"+id).replaceWith(data);
 	}, "html");
 });
 $("#checklistItems").on('click', ".updateItem", function(event) {
+	event.preventDefault();
 	var id = $(this).attr("ref");
 	var text = $("#update_item_text_"+id).val();
+	if (text=='') {
+		return;
+	}
 	$.post( '{{ path('update_item') }}', { id: id, text: text }, function( data ) {
   		$("#item_"+id).replaceWith(data);
-	}, "html");
+	}, "html").fail(function(xhr) {
+		var json = $.parseJSON(xhr.responseText);
+		$("#item_"+id).find('.updateItemFormErrors').html(json.message);
+	}, "json");
 });
 $("#checklistItems").on('click', ".cancelItem", function(event) {
 	var id = $(this).attr("ref");
