--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -3,6 +3,8 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
+
+<h1>Sign in</h1>
 {% if error %}
     <div class="alert alert-danger">{{ error|trans }}</div>
 {% endif %}
@@ -31,10 +33,8 @@
   <input class="btn btn-default right" type="submit" id="_submit" name="_submit" value="Sign in" />
 </form>
 
-<div class="row">
+<div class="row first">
 	<a href="{{ path('fos_user_resetting_request') }}">Forgot password?</a>
-</div>
-<div class="row">
 	New here? <a href="{{ path('fos_user_registration_register') }}">Join now</a>
 </div>
 
