--- a/src/Telegraf/ChecklistBundle/Resources/views/Default/item.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Default/item.html.twig
@@ -2,8 +2,8 @@
 	<input type="checkbox" class="tickItem" id="is_ticked_{{ item.id }}" {% if item.ticked is not null %}checked="checked"{% endif %} />
 	<span class="itemText">{{ item.text }}</span>
   <ul class="itemActions">
-  	<li><a href="#" id="edit_{{ item.id }}" class="editItem">Edit</a></li>
-  	<li><a href="#" id="delete_{{ item.id }}" class="deleteItem">Delete</a></li>
+  	<li><a href="#" id="edit_{{ item.id }}" class="editItem unselected"><span class="label">Edit</span><span class="glyphicon glyphicon-pencil"></span></a></li>
+  	<li><a href="#" id="delete_{{ item.id }}" class="deleteItem unselected"><span class="label">Delete</span><span class="glyphicon glyphicon-trash"></span></a></li>
   	{% if item.created is not empty %}
   		<li>Created: {{ item.created|date("m/d/y g:i:s a") }}</li>
   	{% endif %}  	
