--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -3,11 +3,11 @@
 <h1>Settings</h1>
 
 <ul class="nav nav-tabs">
-  <li class="active"><a href="{{ path('fos_user_profile_edit') }}">Profile</a></li>
+  <li class="active"><a href="{{ path('fos_user_profile_edit') }}">Account</a></li>
   <li><a href="{{ path('fos_user_change_password') }}">Password</a></li>
 </ul>
 
 <form role="form" action="{{ path('fos_user_profile_edit') }}" {{ form_enctype(form) }} method="POST" class="fos_user_profile_edit">
     {{ form_widget(form) }}
-    <input class="btn btn-default" type="submit" value="{{ 'profile.edit.submit'|trans }}" />
+    <input class="btn btn-primary" type="submit" value="{{ 'profile.edit.submit'|trans }}" />
 </form>
