--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -3,7 +3,7 @@
 <h1>Sign up</h1>
 <form role="form" action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
     {{ form_widget(form) }}
-    <input class="btn btn-default" type="submit" value="{{ 'registration.submit'|trans }}" />
+    <input class="btn btn-primary" type="submit" value="{{ 'registration.submit'|trans }}" />
 </form>
 
 <div class="row">
