--- a/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request_content.html.twig
@@ -9,6 +9,6 @@
         <input class="form-control" type="text" id="username" name="username" required="required" />
     </div>
     <div>
-        <input class="btn btn-default" type="submit" value="{{ 'resetting.request.submit'|trans }}" />
+        <input class="btn btn-primary" type="submit" value="{{ 'resetting.request.submit'|trans }}" />
     </div>
 </form>
