--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -30,7 +30,7 @@
     </div>
   </div>
 	
-  <input class="btn btn-default right" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+  <input class="btn btn-primary right" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
 </form>
 
 <div class="row first">
