--- a/app/Resources/public/css/main.css
+++ b/app/Resources/public/css/main.css
@@ -1,6 +1,7 @@
-/* ==========================================================================
-   HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
-   ========================================================================== */
+html {
+  position: relative;
+  min-height: 100%;
+}
 
 html,
 button,
@@ -13,6 +14,7 @@ textarea {
 body {
     font-size: 1em;
     line-height: 1.4;
+    margin-bottom: 60px;
 }
 
 ::-moz-selection {
@@ -55,45 +57,40 @@ textarea {
     padding: 0.2em 0;
 }
 
-
-/* ===== Initializr Styles ==================================================
-   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
-   ========================================================================== */
-
 body {
     font: 14px/26px Helvetica, Helvetica Neue, Arial;
     background-color: #fff;
 }
-
-/* ===================
-    ALL: Theme
-   =================== */
 
 .wrapper {
     margin: 0 0 0 280px;
 }
 
 .main-container {
-    min-height: 100%;
-    height: auto;
-    
-    min-height: 100%;
-	height: auto;
-	margin: 0 auto -60px;
-	padding: 0 0 60px;
+	margin: 0 auto;
 }
 
-.footer-container,
-.main aside {
+footer {
+    position: absolute;
+    bottom: 0;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    padding: 15px;
+    background-color: #f5f5f5;
+    margin-right: -180px;
+    width: 100%;
 }
 
-.header-container,
-.footer-container,
-.main aside {
+footer a {
+    color: #555;
+}
+
+footer a:hover {
+    color: #555;
 }
 
 .title a {
-		color: #555;
+    color: #555;
 }
 
 .title a:hover {
@@ -125,9 +122,8 @@ nav a:visited {
     display: block;
     padding: 7px 35px;
     text-decoration: none;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 12px;
+    font-weight: 600;
+    font-size: 14px;
     color: #777;
     width: 280px;
 }
@@ -165,28 +161,13 @@ nav a span {
 	margin-top: 15px;
 }
 
-.footer-container footer {
-    color: #ccc;
-    padding: 20px 15px;
-    height: 60px;
-	background-color: #f5f5f5;
-}
-
-.footer-container footer a {
-    color: #555;
-}
-
-.footer-container footer a:hover {
-    color: #555;
-}
-
 .nav-tabs {
     margin-bottom: 15px;
 }
 
 h1 {
 	margin-top: 0;
-	margin-bottom: 15px;
+	margin-bottom: 20px;
 }
 
 .alert ul {
@@ -227,7 +208,7 @@ nav ul {
 .main .row {
 }
 
-.footer-container footer {
+footer {
 }
 
 /* ===============
