Fixed sticky footer, updated mail settings

--- a/src/Telegraf/ChecklistBundle/Resources/views/Default/delete.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Default/delete.html.twig
@@ -1,5 +1,5 @@
 <li class="checklistItem deleted" id="item_{{ item.id }}">
-    <p>Task deleted.</p>
+    <p>Task deleted. <button type="button" class="close closeItem" aria-hidden="true">&times;</button></p>
 	<ul class="itemActions">
 	  	<li><a href="#" id="undo_{{ item.id }}" class="undoDeleteItem unselected" ref="{{ item.id }}">Undo</a></li>
     </ul>
