--- a/app/Resources/public/css/main.css
+++ b/app/Resources/public/css/main.css
@@ -70,15 +70,17 @@ body {
 	margin: 0 auto;
 }
 
-footer {
+.footer-container {
     position: absolute;
     bottom: 0;
-    /* Set the fixed height of the footer here */
+    width: 100%;
+}
+
+footer {
     height: 60px;
     padding: 15px;
     background-color: #f5f5f5;
-    margin-right: -180px;
-    width: 100%;
+    margin-left: -180px;
 }
 
 footer a {
