--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,12 +46,11 @@
                 {% block body %}{% endblock %}
             </div>
         </div>
-
-        <footer class="wrapper">
-            <p class="text-muted">&copy; 2014 <a href="http://github.com/markbalt">Mark Baltrusaitis</a> / <a href="http://github.com/markbalt/checklist">Github Repo</a></p>
-        </footer>
-
-
+        <div class="footer-container">
+            <footer class="wrapper">
+                <p class="text-muted">&copy; 2014 <a href="http://github.com/markbalt">Mark Baltrusaitis</a> POC Application / <a href="http://github.com/markbalt/checklist">Github Repo</a></p>
+            </footer>
+        </div>
         {% javascripts
             '../app/Resources/public/js/jquery-1.10.2.min.js'
             '../app/Resources/public/js/bootstrap.min.js'
